fix: offer trusted publishing providers in a stable order
The provider map was built as a HashMap and returned through Map.copyOf,
and the status endpoint collected the active ones into a HashMap again.
Java's immutable maps salt their iteration order per JVM run, so the
provider list the registration dialog offers was reshuffled on every
restart. Both are insertion-ordered now: GitHub first, then the GitLab
instances in configuration order.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>